Atualiza títulos de páginas, melhora a responsividade e padroniza os elementos

--- a/cadastro.html
+++ b/cadastro.html
@@ -115,7 +115,7 @@
                                 <label for="genero">Gênero:</label>
                                 <div class="icone-input">
                                     <i class="fa-solid fa-user borda-i"></i>
-                                    <select id="genero" class="select name=" genero">
+                                    <select id="genero" class="select" name="genero">
                                         <option value="default" selected disabled>...</option>
                                         <option value="masculino">Masculino</option>
                                         <option value="feminino">Feminino</option>
