--- a/informacao_local.html
+++ b/informacao_local.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informações do Local</title>
+    <title>Informações do Local - Hospetagem</title>
 
     <link rel="shortcut icon" href="assets/imagens/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/global.css">
@@ -57,7 +57,7 @@
     <main class="principal">
         <section class="pesquisa">
             <div class="pesquisa-barra">
-                <input type="text" placeholder="Digite algo...">
+                <input type="text" placeholder="Pesquisar...">
                 <button class="btn-pesquisa">
                     <i class="fa fa-search"></i>
                 </button>
