--- a/sobrenos.html
+++ b/sobrenos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós</title>
+    <title>Sobre Nós - Hospetagem</title>
     <link rel="shortcut icon" href="assets/imagens/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/sobrenos.css">
     <link rel="stylesheet" href="assets/css/global.css">
