--- a/tela_reserva.html
+++ b/tela_reserva.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faça sua reserva</title>
+    <title>Faça sua reserva - Hospetagem</title>
+    <link rel="shortcut icon" href="/assets/imagens/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/reserva.css">
@@ -54,7 +55,7 @@
     <main class="principal">
         <section class="pesquisa">
             <div class="pesquisa-barra">
-                <input type="text" placeholder="Digite algo...">
+                <input type="text" placeholder="Pesquisar...">
                 <button class="btn-pesquisa">
                     <i class="fa fa-search"></i>
                 </button>
@@ -70,36 +71,49 @@
                 <h2 class="section-h2"><span class="h2-span">1</span> Informações da Hospedagem</h2>
                 <form action="post">
                     <div class="div-campos">
-                        <label for="quantidade" class="p-label">Quantos animais serão hospedados?</label>
-                        <div class="select">
-                            <select name="quantidade" id="" class="p-input">
-                                <option value="default" class="p-input" selected disabled>...</option>
-                                <option value="1" class="p-input">1</option>
-                                <option value="2" class="p-input">2</option>
-                                <option value="3" class="p-input">3</option>
-                            </select>    
+                        <p class="p-label">Quantos animais serão hospedados?</p>
+                        <div class="collapse select" data-target="#menu-1" tabindex="0">
+                            <div class="nome-menu">
+                                <p class="p-input">...</p>
+                            </div>
+                            <div class="menu-collapse" id="menu-1" tabindex="0">
+                                <ul class="lista-menu">
+                                    <li class="item-menu">
+                                        <input type="radio" id="quantidade-1" name="quantidade" value="1">
+                                        <label for="quantidade-1">1</label>
+                                    </li>
+                                    <li class="item-menu">
+                                        <input type="radio" id="quantidade-2" name="quantidade" value="2">
+                                        <label for="quantidade-2">2</label>
+                                    </li>
+                                    <li class="item-menu">
+                                        <input type="radio" id="quantidade-3" name="quantidade" value="3">
+                                        <label for="quantidade-3">3</label>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
                     <div class="div-campos">
                         <p class="p-label">Para quais animais deseja reservar?</p>
-                        <div class="collapse select" id="collapse" tabindex="0">
+                        <div class="collapse select" data-target="#menu-2" tabindex="0">
                             <div class="nome-menu">
                                 <p class="p-input">...</p>
                             </div>
-                            <div class="menu-collapse" tabindex="1">
+                            <div class="menu-collapse" id="menu-2" tabindex="0">
                                 <ul class="lista-menu">
                                     <li class="item-menu">
                                         <input type="checkbox">
-                                        <label for="" class="p-input">Oliver</label>
+                                        <label for="">Oliver</label>
                                     </li>
                                     <li class="item-menu">
                                         <input type="checkbox">
-                                        <label for="" class="p-input">Amora</label>
+                                        <label for="">Amora</label>
                                     </li>
                                     <li class="item-menu">
                                         <input type="checkbox">
-                                        <label for="" class="p-input">Zeus</label>
+                                        <label for="">Zeus</label>
                                     </li>
                                 </ul>
                             </div>
