Atualização de telas (#13)
Co-authored-by: renatakaren <166053203+renatakaren@users.noreply.github.com>
Co-authored-by: gustavol007 <gustavogabrielrodrigues123@gmail.com>

--- a/pagamento.html
+++ b/pagamento.html
@@ -101,7 +101,7 @@
                                 <input type="checkbox" name="cartao-escolhido" id="adicionar">
                                 <label class="ad-cartao" for="adicionar">Adicionar Cartao</label>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="op-pagamento">
                         <input type="radio" name="pagamento" value="Cartão de Crédito" id="credito">
