Atualização dos botões

--- a/tela_reserva.html
+++ b/tela_reserva.html
@@ -139,39 +139,39 @@
                 <h2 class="section-h2"><span class="h2-span">2</span> Seleção de Serviços</h2>
                 <p class="p-texto">Quais tipos de serviços gostaria de incluir na reserva?</p>
                 <div class="div-servicos">
-                    <button class="servicos-btn" onclick="toggleBackground(this)">
+                    <button class="servicos-btn" onclick="toggleBackground(this)" type="button">
                         <img src="assets/imagens/icons/brincadeira-icon.svg" alt="">
                         <p>Área de Brincadeiras</p>
                     </button>
-                    <button class="servicos-btn" onclick="toggleBackground(this)">
+                    <button class="servicos-btn" onclick="toggleBackground(this)" type="button">
                         <img src="assets/imagens/icons/piscina-icon.svg" alt="">
                         <p>Piscina para Cães</p>
                     </button>
-                    <button class="servicos-btn" onclick="toggleBackground(this)">
+                    <button class="servicos-btn" onclick="toggleBackground(this)" type="button">
                         <img src="assets/imagens/icons/treinamento-icon.svg" alt="">
                         <p>Treinamento</p>
                     </button>
-                    <button class="servicos-btn" onclick="toggleBackground(this)">
+                    <button class="servicos-btn" onclick="toggleBackground(this)" type="button">
                         <img src="assets/imagens/icons/cuidados-icon.svg" alt="">
                         <p>Cuidados Personalizados</p>
                     </button>
-                    <button class="servicos-btn" onclick="toggleBackground(this)">
+                    <button class="servicos-btn" onclick="toggleBackground(this)" type="button">
                         <img src="assets/imagens/icons/transporte-icon.svg" alt="">
                         <p>Serviço de Transporte</p>
                     </button>
-                    <button class="servicos-btn" onclick="toggleBackground(this)">
+                    <button class="servicos-btn" onclick="toggleBackground(this)" type="button">
                         <img src="assets/imagens/icons/passeio-icon.svg" alt="">
                         <p>Passeio ao Ar Livre</p>
                     </button>
-                    <button class="servicos-btn" onclick="toggleBackground(this)">
+                    <button class="servicos-btn" onclick="toggleBackground(this)" type="button">
                         <img src="assets/imagens/icons/descanso-icon.svg" alt="">
                         <p>Área de Descanso</p>
                     </button>
-                    <button class="servicos-btn" onclick="toggleBackground(this)">
+                    <button class="servicos-btn" onclick="toggleBackground(this)" type="button">
                         <img src="assets/imagens/icons/banho-tosa-icon.svg" alt="">
                         <p>Banho e Tosa</p>
                     </button>
-                    <button class="servicos-btn" onclick="toggleBackground(this)">
+                    <button class="servicos-btn" onclick="toggleBackground(this)" type="button">
                         <img src="assets/imagens/icons/hospedagem-icon.svg" alt="">
                         <p>Hospedagem Noturna</p>
                     </button>
@@ -198,7 +198,7 @@
                     </div>
                 </div>
             </section>
-            <button class="btn-continuar"><a href="#">Continuar</a></button>
+            <button class="btn-continuar" type="submit"><a href="#">Continuar</a></button>
         </section>
     </main>
 
