--- a/project/homeAdm.html
+++ b/project/homeAdm.html
@@ -44,10 +44,7 @@
             <li><img src="assets/imagens/icons/chat-right-text.svg" alt=""> Mensagens</li>
             <li><img src="assets/imagens/icons/chat-right-quote.svg" alt=""> Feedback</li>
         </ul>
-    </div>
-
-
-    
+    </div>    
     <div class="floating-menu" id="floatingMenu">
         <h4>Mudar Aparência</h4>
         <hr style="margin-top: 10px;">
@@ -70,14 +67,13 @@
             <div class="charts">
                 <div class="chart">
                     <h4 class="title">Estatísticas de Reservas Realizadas Por Dia</h4>
-                    <h6>Ver mais estatísticas <img src="assets/imagens/icons/arrow-right-short.svg" alt=""></h6>
                     <canvas id="reservasChart"></canvas>
+                    <div>
+                        <h4 class="title">Taxa de Ocupação por dia</h4>
+                        <canvas id="ocupacaoChart"></canvas>
+                    </div>
                 </div>
-                <div class="chart">
-                    <h4 class="title">Taxa de Ocupação por dia</h4>
-                    <h6>Ver mais estatísticas <img src="assets/imagens/icons/arrow-right-short.svg" alt=""></h6>
-                    <canvas id="ocupacaoChart"></canvas>
-                </div>
+                <h6>Ver mais estatísticas <img src="assets/imagens/icons/arrow-right-short.svg" alt=""></h6>
             </div>
         </div>
     </main>
